# hdf5manager

./: BinExtract.py  ExcelExtract.py  H5Create.py  H5Search.py  Hdf5Manager.pyproject  ReadBin.f  designer.lnk  main.py  main.ui  mainwindow.py  rrestf.f  strip.f  ui_main.py
.qt_for_python/uic/: main - Copy.py  main.py
HDF5 File/: APTLaunch.debug  NEW TESTprova_22_20_40.h5  new.h5  prova_11_02_17.h5  prova_16_25_06.h5  provabl.h5  test1.h5  test2.h5  test3.h5
HDF5 File/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
HDF5 File/NEW TEST/: NEW TESTprova_22_26_31.h5  Prova_BL-34_10_06_43.h5  Prova_BL-34_12_07_49.h5  p2.h5  prova_23_53_45.h5
Project/PyDraculaHDF5/: CMakeLists.txt  PyDraculaHDF5.qmlproject  PyDraculaHDF5.qmlproject.qtds  qmlmodules
Project/PyDraculaHDF5/content/: App.qml  Screen01.ui.qml
Project/PyDraculaHDF5/imports/: CMakeLists.txt
Project/PyDraculaHDF5/imports/PyDraculaHDF5/: CMakeLists.txt  qmldir
Project/PyDraculaHDF5/imports/PyDraculaHDF5/designer/: plugin.metainfo
Project/PyDraculaHDF5/src/: import_qml_plugins.h
documents/: AppuntiProssimaVolta  LOC2-Formula.txt  SS_NOS_TES_TAS_v2_(0.76mg_s)_strip  bl-34 variables_template.xlsx
excel/: Prova_BL-34.csv  Prova_BL-34.xls  Prova_BL-34.xlsx
modules/: TechVidvan_FileManager.py  app_functions.py  ui_functions.py  ui_main.py
plugin/hdf5-is-for-lovers-master/: hdf5-is-for-lovers.slides.html
